third_party/llvm-project/llvm/test/MC/AArch64/SME/sclamp-diagnostics.s
// RUN: not llvm-mc -triple=aarch64 -show-encoding -mattr=+sme 2>&1 < %s| FileCheck %s

// ------------------------------------------------------------------------- //
// Mismatched element width

sclamp z0.b, z1.h, z2.b
// CHECK: [[@LINE-1]]:{{[0-9]+}}: error: invalid element width
// CHECK-NEXT: sclamp z0.b, z1.h, z2.b
// CHECK-NOT: [[@LINE-1]]:{{[0-9]+}}:

sclamp z0.b, z1.b, z2.q
// CHECK: [[@LINE-1]]:{{[0-9]+}}: error: invalid element width
// CHECK-NEXT: sclamp z0.b, z1.b, z2.q
// CHECK-NOT: [[@LINE-1]]:{{[0-9]+}}:

// --------------------------------------------------------------------------//
// Test incompatibility with predicated MOVPRFX instruction.

movprfx z0.b, p0/z, z1.b
sclamp z0.b, z1.b, z2.b
// CHECK: [[@LINE-1]]:{{[0-9]+}}: error: instruction is unpredictable when following a predicated movprfx, suggest using unpredicated movprfx
// CHECK-NEXT: sclamp z0.b, z1.b, z2.b
// CHECK-NOT: [[@LINE-1]]:{{[0-9]+}}:
